# alfred

./: .dockerignore  .env.example  .gitignore  GCP_DEPLOYMENT.md  GCP_DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  ONBOARDING_FLOW.md  ONBOARDING_SYSTEM_SUMMARY.md  PHASE1_COMPLETE.md  PHASE2_PLAN.md  QUICK_START.md  README.md  SETUP_GUIDE.md  TEAM_ONBOARDING_SYSTEM.md  complete_reset.sql  docker-compose.yml  progress.md  restore-env.sh
.github/workflows/: deploy-jl.yml  deploy.yml
ai-core-service/: Dockerfile  README.md  pyproject.toml  run.sh
ai-core-service/ai/: project_brainstormer.py
ai-core-service/api/: __init__.py  app.py
ai-core-service/services/: clickup_publisher.py  doc_generator.py
ai-core-service/tests/: test_brainstormer_manual.py
click-up-agent/: README.md  main.py
click-up-agent/models/: task.py
click-up-agent/tools/: clickup_fetcher.py  discover_lists.py  slack_notifier.py
deployment/: deploy.sh
discord-bot/: .dockerignore  .env.example  .gitignore  COMMANDS.md  DOCKER_DEPLOYMENT.md  Dockerfile  README.md  pyproject.toml  run.sh
discord-bot/bot/: admin_commands.py  bot.py  config.py  debug_permissions.py  onboarding.py  project_planning.py  services.py  task_management.py  team_management_commands.py
discord-bot/scripts/: README.md  cleanup_everything.py  create_admin.py  debug_admin_channel.py  initialize_team_folders.py  interactive_setup.py  reset_database.py  setup_everything.py  test_google_docs_integration.py
docs/: CI_CD_SETUP.md  DATABASE_IMPROVEMENTS.md  DATABASE_SETUP.md  IMPROVEMENTS_NEEDED.md  MONITORING.md  MULTI_AGENT_ARCHITECTURE.md  PROJECT_PLANNING_ARCHITECTURE.md  SYSTEM_ARCHITECTURE.md  SYSTEM_OVERVIEW.md  progress.md
github-agent/: README.md
github-agent/github_daily_report/: .env.example  README.md  pyproject.toml
github-agent/github_daily_report/github_daily_report/: commit_analyzer.py  github_agent.py  github_client.py  github_tools.py  issue_analyzer.py  main.py
project-planning-system/: .env.example  README.md  pyproject.toml  setup.sh
project-planning-system/ai/: __init__.py  doc_parser.py  project_brainstormer.py  prompts.py
project-planning-system/api/: app.py  models.py
project-planning-system/services/: __init__.py  doc_generator.py
project-planning-system/tests/: __init__.py
shared-services/: .gitignore
shared-services/auth-service/: .env.example  README.md  pyproject.toml
shared-services/auth-service/auth_service/: __init__.py  models.py  supabase_client.py
shared-services/data-service/: README.md  pyproject.toml
shared-services/data-service/data_service/: __init__.py  client.py  models.py
shared-services/docs-service/: .env.example  README.md  pyproject.toml
shared-services/docs-service/docs_service/: __init__.py  google_docs_client.py  models.py  templates.py
task-service/: Dockerfile  README.md  pyproject.toml
task-service/api/: __init__.py  app.py  models.py
task-service/services/: __init__.py  clickup_client.py
team-management-system/: .env.example  .gitignore  README.md  pyproject.toml
team-management-system/team_management_system/: __init__.py  cli.py
team-management-system/team_management_system/models/: __init__.py  project_template.py  team_member.py
team-management-system/team_management_system/scripts/: setup_project_in_clickup.py
team-management-system/team_management_system/services/: __init__.py  clickup_team_service.py  project_setup_service.py
team-visibility-system/: .env.example  README.md  SETUP_GOOGLE_DRIVE.md  SETUP_SLACK.md  requirements.txt  send_reports.py  test_stage1.py
team-visibility-system/ai/: README.md  __init__.py  prompts.py  report_generator.py  task_summarizer.py
team-visibility-system/clients/: clickup_client.py  discord_client.py  gdrive_client.py  slack_client.py
team-visibility-system/processing/: blocker_detector.py  data_aggregator.py  goal_tracker.py  task_validator.py  weekly_context.py
terraform/: README.md  main.tf  startup-script.sh  terraform.tfvars.example  variables.tf
(+23 files in other folders)
