[project]
name = "auth-service"
version = "0.1.0"
description = "Supabase authentication service for Alfred - reusable across all components"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
    "pydantic[email]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["auth_service"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
