[project]
name = "docs-service"
version = "0.1.0"
description = "Google Docs documentation service for Alfred - reusable knowledge base creator"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["docs_service"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
